# fusion-report

./: .buildinfo  .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  _sidebar.md  add_database.html  add_database.md  add_tool.html  add_tool.md  conda_environment.sh  conda_environment.yml  core.html  customize_report.html  download.md  download_db.html  example_config.yml  fusion_report.log.2023-02-21  fusion_report.log.2023-11-24  fusion_report.log.2023-11-27  fusion_report.log.2024-06-25  fusion_report.log.2025-04-03  genindex.html  index.html  lib.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  score.md  scoring.html  search.html  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md
_modules/: index.html
_sources/: core.rst.txt  customize_report.rst.txt  index.rst.txt  usage.rst.txt
db/: DB-timestamp.txt
docs/: Makefile  _404.md  _sidebar.md  add_database.md  add_tool.md  customize_report.md  download.md  score.md  templating.md  usage.md
example/: AKAP9_BRAF.html  BRD4-1_NUTM1.html  BRD4_NUTM1.html  CD74_AL132671.2.html  CD74_ROS1.html  CIC_DUX4.html  DUX4_IGH@.html  EML4_ALK.html  ETV6_NTRK3.html  EWSR1_ATF1.html  EWSR1_FLI1.html  FGFR3_TACC3.html  FIP1L1_PDGFRA.html  GOPC_ROS1.html  HOOK3_RET.html  IFT81_NDRG4.html  IGH@_CRLF2.html  MALT1_IGH@.html  MT-ATP8_MT-ATP6.html  NPM1_ALK.html  SLC6A15_MT-ND2.html  TMPRSS2_ETV1.html  fusion_genes_mqc.json  fusion_list.tsv  fusions.csv  fusions.json  fusions_list_filtered.txt  index.html
(+284 files in other folders)
